# cpisync

./: .gitignore  Alice.txt  Alice0.txt  Alice1.txt  Alice2.txt  Alice3.txt  Alice4.txt  Alicecopy.txt  Bob.txt  Bob0.txt  Bob1.txt  Bob2.txt  Bob3.txt  Bob4.txt  Bobcopy.txt  CMakeLists.txt  Dockerfile  Performance  README.md  Resource Monitor.0001.heap  Resource Monitor.0002.heap  Resource Monitor.0003.heap  Resource Monitor.0004.heap  Resource Monitor.0005.heap  Resource Monitor.0006.heap  Resource Monitor.0007.heap  Resource Monitor.0008.heap  Resource Monitor.0009.heap  Resource Monitor.0010.heap  Resource Monitor.0011.heap  Resource Monitor.0012.heap  Resource Monitor.0013.heap  Resource Monitor.0014.heap  Resource Monitor.0015.heap  Resource Monitor.0016.heap  Resource Monitor.0017.heap  Resource Monitor.0018.heap  Resource Monitor.0019.heap  Resource Monitor.0020.heap  Resource Monitor.0021.heap  (+87 more)
CLI/: SCSync.cpp  SCSync.h
SCSync.dSYM/Contents/: Info.plist
include/: AdjMtx.h  Auxiliary.h  CPISync_ExistingConnection.h  Communicant.h  ForkHandle.h  GenSync.h  PerformanceData.h  ProcessData.h  RCDS.h  SetsOfContent.h  SyncMethod.h  UniqueDecode.h  kshingling.h  kshinglingSync.h
prev_result/: Sets of Content CPISync RandBookP4CL.txt  Sets of Content CPISync RandBookP4CL0.txt  Sets of Content CPISync RandBookP4CL1.txt  Sets of Content CPISync RandBookP4CL2.txt  Sets of Content CPISync RandBookP4CL3.txt
src/: AdjMtx.cpp  CPISync.cpp  CommSocket.cpp  Communicant.cpp  GenSync.cpp  IBLT.cpp  IBLTSync_SetDiff.cpp  InterCPISync.cpp  InterCPISync.fdb_latexmk  InterCPISync.fls  PerformanceData.cpp  RCDS.cpp  SetsOfContent.cpp  StrataEst.cpp  TryMe.cpp  UniqueDecode.cpp  kshingling.cpp  kshinglingSync.cpp
src/Syncs/: GenSync.cpp
tests/: SampleCode.txt
tests/perf/: SampleTxtorg.txt  StringSyncPerfTest.cpp  kshinglingSyncPerfTest.cpp  kshinglingSyncPerfTest.h  rsync_perf.py
tests/unit/: AdjMtxTest.cpp  AuxiliaryTest.cpp  CPITest.cpp  CPITest.h  IBLTSyncDiffTest.cpp  IBLTSyncTest.cpp  IBLTSyncTest.h  SetsOfContentTest.cpp  SetsOfContentTest.fdb_latexmk  SetsOfContentTest.fls  SetsOfContentTest.h  UniqueDecodeTest.cpp  kshinglingSyncTest.cpp  kshinglingSyncTest.h  kshinglingTest.cpp
